@@ -8,7 +8,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>ingrid-external-service-wfs</artifactId>
   <packaging>jar</packaging>
-  <version>5.11.0</version>
+  <version>6.0.0</version>
   <name>InGrid external-service-wfs</name>
   <scm>
     <connection>scm:git:git@github.com:informationgrid/ingrid-external-service-wfs.git</connection>
@@ -16,13 +16,13 @@
     <tag>HEAD</tag>
   </scm>
   <properties>
-    <geotk.version>4.0-M5</geotk.version>
+    <geotk.version>4.0.5</geotk.version>
   </properties>
   <dependencies>
     <dependency>
       <groupId>de.ingrid</groupId>
       <artifactId>ingrid-external-services-api</artifactId>
-      <version>4.0.3</version>
+      <version>6.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.geotoolkit</groupId>
@@ -35,19 +35,37 @@
       <version>3.1</version>
     </dependency>
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.17</version>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.19.0</version>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.13.1</version>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.19.0</version>
     </dependency>
     <dependency>
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest-all</artifactId>
       <version>1.3</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest</artifactId>
+      <version>2.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>5.9.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.activation</groupId>
+      <artifactId>javax.activation-api</artifactId>
+      <version>1.2.0</version>
     </dependency>
   </dependencies>
   <build>
@@ -59,6 +77,16 @@
         <configuration>
           <defaultOriginUrl>https://github.com/informationgrid/ingrid-external-service-wfs</defaultOriginUrl>
           <noDeploy>true</noDeploy>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.2</version>
+        <configuration>
+          <argLine>
+            --add-opens java.base/java.lang=ALL-UNNAMED
+          </argLine>
         </configuration>
       </plugin>
     </plugins>
@@ -73,7 +101,13 @@
       <!-- Not needed for "*-geoapi-3.0" versions -->
       <id>geotoolkit</id>
       <name>Geotk repository</name>
-      <url>http://maven.geotoolkit.org</url>
+      <url>https://maven.geotoolkit.org</url>
+    </repository>
+    <repository>
+      <!-- Not needed for "geotk-client-wfs" versions -->
+      <id>geotoolkit-client</id>
+      <name>Geomatis repository</name>
+      <url>https://nexus.geomatys.com/repository/geotoolkit/</url>
     </repository>
   </repositories>
 </project>
